added date selection on with card entering page

--- a/src/main/resources/com/fitness/fragment/customer/add_customer.fxml
+++ b/src/main/resources/com/fitness/fragment/customer/add_customer.fxml
@@ -70,7 +70,7 @@
           <RowConstraints vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <DatePicker fx:id="datePicker" GridPane.rowIndex="1" />
+            <DatePicker fx:id="datePicker" editable="false" GridPane.rowIndex="1" />
             <Label text="Ժամ" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
          <GridPane.margin>
