--- a/src/main/resources/com/fitness/fragment/enter/with_card.fxml
+++ b/src/main/resources/com/fitness/fragment/enter/with_card.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
@@ -114,13 +115,44 @@
          </columnResizePolicy>
       </TableView>
       <Button fx:id="enterButton" mnemonicParsing="false" styleClass="primary" text="Մուտք" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="17" />
-      <CheckBox fx:id="bonusCheckBox" mnemonicParsing="false" text="Բոնուս" GridPane.rowIndex="17">
+      <CheckBox fx:id="bonusCheckBox" mnemonicParsing="false" text="Բոնուս" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.rowIndex="17">
          <font>
-            <Font size="23.0" />
+            <Font size="15.0" />
          </font>
          <GridPane.margin>
             <Insets />
          </GridPane.margin>
       </CheckBox>
+      <GridPane hgap="10.0" GridPane.columnSpan="2" GridPane.rowIndex="17">
+         <columnConstraints>
+            <ColumnConstraints hgrow="NEVER" />
+            <ColumnConstraints hgrow="SOMETIMES" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <CheckBox fx:id="backYearCheckBox" mnemonicParsing="false" text="Գրանցում հետին թվով">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </CheckBox>
+            <GridPane fx:id="backYearGridPane" disable="true" hgap="10.0" GridPane.columnIndex="1">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="NEVER" />
+                  <ColumnConstraints hgrow="NEVER" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints vgrow="SOMETIMES" />
+                  <RowConstraints vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <DatePicker fx:id="datePicker" editable="false" GridPane.rowIndex="1" />
+                  <Label text="Ժամ" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+               </children>
+            </GridPane>
+         </children>
+      </GridPane>
    </children>
 </fx:root>
