--- a/src/main/resources/com/fitness/fragment/enter/without_card.fxml
+++ b/src/main/resources/com/fitness/fragment/enter/without_card.fxml
@@ -17,6 +17,7 @@
       <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" />
       <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" />
       <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" />
+      <ColumnConstraints />
    </columnConstraints>
    <rowConstraints>
       <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
@@ -99,7 +100,7 @@
                   <RowConstraints vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <DatePicker fx:id="datePicker" GridPane.rowIndex="1" />
+                  <DatePicker fx:id="datePicker" editable="false" GridPane.rowIndex="1" />
                   <Label text="Ժամ" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
             </GridPane>
