--- a/src/main/resources/com/fitness/fragment/settings.fxml
+++ b/src/main/resources/com/fitness/fragment/settings.fxml
@@ -1,8 +1,182 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<fx:root type="javafx.scene.layout.GridPane" xmlns="http://javafx.com/javafx"
-         xmlns:fx="http://javafx.com/fxml"
-         prefHeight="400.0" prefWidth="600.0">
+<?import javafx.scene.layout.RowConstraints?>
 
+<fx:root stylesheets="@../style/bootstrap3.css" type="javafx.scene.layout.GridPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+   <columnConstraints>
+      <ColumnConstraints hgrow="ALWAYS" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints vgrow="NEVER" />
+      <RowConstraints />
+      <RowConstraints valignment="BOTTOM" vgrow="ALWAYS" />
+      <RowConstraints vgrow="NEVER" />
+      <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
+      <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="ALWAYS" />
+      <RowConstraints valignment="BOTTOM" />
+   </rowConstraints>
+   <children>
+      <Label styleClass="header1" text="Կարգավորումներ" />
+      <ScrollPane fitToWidth="true" GridPane.rowIndex="1">
+        <content>
+          <AnchorPane>
+               <children>
+                  <GridPane AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints vgrow="SOMETIMES" />
+                      <RowConstraints vgrow="SOMETIMES" />
+                        <RowConstraints vgrow="SOMETIMES" />
+                        <RowConstraints vgrow="SOMETIMES" />
+                        <RowConstraints vgrow="SOMETIMES" />
+                        <RowConstraints vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label styleClass="header2" text="Աշխատանքային օրեր">
+                           <GridPane.margin>
+                              <Insets bottom="5.0" top="5.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <GridPane fx:id="workingDaysGridPane" gridLinesVisible="true" GridPane.rowIndex="1">
+                          <columnConstraints>
+                            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
+                              <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
+                              <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
+                              <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
+                              <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
+                              <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
+                            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
+                              <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
+                          </columnConstraints>
+                        </GridPane>
+                        <Separator GridPane.rowIndex="2">
+                           <GridPane.margin>
+                              <Insets top="40.0" />
+                           </GridPane.margin>
+                        </Separator>
+                        <Label styleClass="header2" text="Տվյալների բազա" GridPane.rowIndex="3">
+                           <GridPane.margin>
+                              <Insets bottom="5.0" top="5.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <Label fx:id="connectionStatusLabel" text="Միացում չկա" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+                        <TabPane fx:id="databaseTabPane" tabClosingPolicy="UNAVAILABLE" GridPane.rowIndex="4">
+                          <tabs>
+                            <Tab fx:id="localTab" text="Լոկալ">
+                                 <content>
+                                    <GridPane hgap="5.0" vgap="5.0">
+                                      <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" />
+                                        <ColumnConstraints hgrow="SOMETIMES" />
+                                      </columnConstraints>
+                                      <rowConstraints>
+                                        <RowConstraints vgrow="NEVER" />
+                                        <RowConstraints vgrow="NEVER" />
+                                          <RowConstraints vgrow="NEVER" />
+                                        <RowConstraints vgrow="NEVER" />
+                                          <RowConstraints vgrow="ALWAYS" />
+                                      </rowConstraints>
+                                       <children>
+                                          <Label text="Պորտ" />
+                                          <Label text="Տվյալների բազա" GridPane.rowIndex="1" />
+                                          <Label text="Գաղտնանուն" GridPane.rowIndex="2" />
+                                          <Label text="Գաղտնաբառ" GridPane.rowIndex="3" />
+                                          <Button fx:id="localConnectButton" mnemonicParsing="false" text="Միանալ" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="BOTTOM" />
+                                          <TextField fx:id="localPortTextField" GridPane.columnIndex="1" />
+                                          <TextField fx:id="localDatabaseTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                          <TextField fx:id="localUsernameTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                          <PasswordField fx:id="localPasswordField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                       </children>
+                                       <padding>
+                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                       </padding>
+                                    </GridPane>
+                                 </content>
+                              </Tab>
+                            <Tab fx:id="remoteTab" text="Հեռավար">
+                                 <content>
+                                    <GridPane hgap="5.0" vgap="5.0">
+                                      <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" />
+                                        <ColumnConstraints hgrow="SOMETIMES" />
+                                      </columnConstraints>
+                                      <rowConstraints>
+                                          <RowConstraints vgrow="NEVER" />
+                                        <RowConstraints vgrow="NEVER" />
+                                          <RowConstraints vgrow="NEVER" />
+                                        <RowConstraints vgrow="NEVER" />
+                                          <RowConstraints vgrow="ALWAYS" />
+                                      </rowConstraints>
+                                       <children>
+                                          <Label text="Հղում" />
+                                          <Label text="Տվյալների բազա" GridPane.rowIndex="1" />
+                                          <Label text="Գաղտնանուն" GridPane.rowIndex="2" />
+                                          <Label text="Գաղտնաբառ" GridPane.rowIndex="3" />
+                                          <Button fx:id="remoteConnectButton" mnemonicParsing="false" text="Միանալ" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="BOTTOM" />
+                                          <TextField fx:id="remoteURITextField" GridPane.columnIndex="1" />
+                                          <TextField fx:id="remoteDatabaseTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                          <TextField fx:id="remoteUsernameTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                          <PasswordField fx:id="remotePasswordField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                       </children>
+                                       <padding>
+                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                       </padding>
+                                    </GridPane>
+                                 </content>
+                              </Tab>
+                              <Tab fx:id="fileTab" text="Ֆայլային">
+                                 <content>
+                                    <GridPane hgap="5.0" vgap="5.0">
+                                      <columnConstraints>
+                                        <ColumnConstraints hgrow="NEVER" />
+                                          <ColumnConstraints hgrow="ALWAYS" />
+                                      </columnConstraints>
+                                      <rowConstraints>
+                                          <RowConstraints vgrow="NEVER" />
+                                        <RowConstraints vgrow="NEVER" />
+                                        <RowConstraints vgrow="ALWAYS" />
+                                      </rowConstraints>
+                                       <children>
+                                          <Label text="Ֆայլ" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                                          <TextField fx:id="fileTextField" editable="false" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                                          <Button fx:id="browseFileButton" mnemonicParsing="false" text="Ֆայլեր" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                                          <Button fx:id="fileConnectButton" mnemonicParsing="false" text="Միանալ" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="BOTTOM" />
+                                       </children>
+                                       <padding>
+                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                       </padding>
+                                    </GridPane>
+                                 </content>
+                              </Tab>
+                          </tabs>
+                        </TabPane>
+                        <Button fx:id="disconnectButton" mnemonicParsing="false" text="Անջատվել" GridPane.halignment="RIGHT" GridPane.rowIndex="5" GridPane.valignment="TOP" />
+                     </children>
+                  </GridPane>
+               </children>
+            </AnchorPane>
+        </content>
+         <GridPane.margin>
+            <Insets top="10.0" />
+         </GridPane.margin>
+      </ScrollPane>
+      <Button fx:id="confirmChangesButton" mnemonicParsing="false" styleClass="primary" text="Հաստատել փոփոխություններ" GridPane.halignment="RIGHT" GridPane.rowIndex="9" GridPane.valignment="BOTTOM" />
+   </children>
 </fx:root>
