--- a/src/main/resources/com/fitness/fragment/settings.fxml
+++ b/src/main/resources/com/fitness/fragment/settings.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Tab?>
@@ -71,12 +72,25 @@
                               <Insets top="40.0" />
                            </GridPane.margin>
                         </Separator>
-                        <Label styleClass="header2" text="Տվյալների բազա" GridPane.rowIndex="3">
-                           <GridPane.margin>
-                              <Insets bottom="5.0" top="5.0" />
-                           </GridPane.margin>
-                        </Label>
-                        <Label fx:id="connectionStatusLabel" text="Միացում չկա" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+                        <GridPane GridPane.rowIndex="3">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" />
+                              <ColumnConstraints hgrow="NEVER" />
+                            <ColumnConstraints hgrow="NEVER" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <Label styleClass="header2" text="Տվյալների բազա">
+                                 <GridPane.margin>
+                                    <Insets bottom="5.0" top="5.0" />
+                                 </GridPane.margin>
+                              </Label>
+                              <ProgressIndicator fx:id="connectionProgressIndicator" visible="false" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+                              <Label fx:id="connectionStatusLabel" text="Միացում չկա" GridPane.columnIndex="2" GridPane.halignment="RIGHT" />
+                           </children>
+                        </GridPane>
                         <TabPane fx:id="databaseTabPane" tabClosingPolicy="UNAVAILABLE" GridPane.rowIndex="4">
                           <tabs>
                             <Tab fx:id="localTab" text="Լոկալ">
