--- a/src/main/resources/com/fitness/fragment/enter/with_card.fxml
+++ b/src/main/resources/com/fitness/fragment/enter/with_card.fxml
@@ -11,6 +11,8 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -24,6 +26,7 @@
       <ColumnConstraints />
    </columnConstraints>
    <rowConstraints>
+      <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
       <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
       <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
       <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
@@ -74,40 +77,53 @@
             <Insets left="10.0" right="10.0" />
          </GridPane.margin>
       </ComboBox>
-      <Separator prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="3">
+      <ToggleButton fx:id="allEmployeesToggleButton" maxHeight="1.7976931348623157E308" mnemonicParsing="false" text="Բոլորը" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.rowIndex="3">
+         <GridPane.margin>
+            <Insets left="10.0" />
+         </GridPane.margin>
+         <toggleGroup>
+            <ToggleGroup fx:id="employeeToggle" />
+         </toggleGroup>
+      </ToggleButton>
+      <ToggleButton fx:id="todayEmployeesToggleButton" maxHeight="1.7976931348623157E308" mnemonicParsing="false" selected="true" text="Այսօրվանը" toggleGroup="$employeeToggle" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+         <GridPane.margin>
+            <Insets right="10.0" />
+         </GridPane.margin>
+      </ToggleButton>
+      <Separator prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="4">
          <GridPane.margin>
             <Insets bottom="5.0" top="5.0" />
          </GridPane.margin>
       </Separator>
-      <Label styleClass="header2" text="Հաճախորդի տվյալներ" GridPane.columnSpan="4" GridPane.rowIndex="4">
+      <Label styleClass="header2" text="Հաճախորդի տվյալներ" GridPane.columnSpan="4" GridPane.rowIndex="5">
          <GridPane.margin>
             <Insets bottom="5.0" />
          </GridPane.margin>
       </Label>
-      <Label text="Անուն Ազգանուն" GridPane.columnSpan="2" GridPane.rowIndex="5" />
-      <Label text="Հեռախոս" GridPane.columnSpan="2" GridPane.rowIndex="7" />
-      <Label text="Հեռախոս 2֊րդ" GridPane.columnSpan="2" GridPane.rowIndex="9" />
-      <Label text="Հասցե" GridPane.rowIndex="11" />
-      <Label text="Աբոնեմենտ" GridPane.columnSpan="2" GridPane.rowIndex="13" />
-      <Label text="Գրանցման օր" GridPane.rowIndex="15" />
-      <Label text="Վերջին այց" GridPane.columnSpan="2" GridPane.rowIndex="17" />
-      <Label fx:id="fullNameLabel" text="" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="5" />
-      <Separator prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="6" />
-      <Label fx:id="phoneLabel" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="7">
+      <Label text="Անուն Ազգանուն" GridPane.columnSpan="2" GridPane.rowIndex="6" />
+      <Label text="Հեռախոս" GridPane.columnSpan="2" GridPane.rowIndex="8" />
+      <Label text="Հեռախոս 2֊րդ" GridPane.columnSpan="2" GridPane.rowIndex="10" />
+      <Label text="Հասցե" GridPane.rowIndex="12" />
+      <Label text="Աբոնեմենտ" GridPane.columnSpan="2" GridPane.rowIndex="14" />
+      <Label text="Գրանցման օր" GridPane.rowIndex="16" />
+      <Label text="Վերջին այց" GridPane.columnSpan="2" GridPane.rowIndex="18" />
+      <Label fx:id="fullNameLabel" text="" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
+      <Separator prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="7" />
+      <Label fx:id="phoneLabel" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="8">
          <GridPane.margin>
             <Insets />
          </GridPane.margin></Label>
-      <Separator prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="8" />
-      <Label fx:id="phone2Label" text="" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="9" />
-      <Separator prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="10" />
-      <Label fx:id="addressLabel" text="" GridPane.columnIndex="2" GridPane.rowIndex="11" />
-      <Separator prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="12" />
-      <Label fx:id="subscriptionLabel" text="" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="13" />
-      <Separator GridPane.columnSpan="2147483647" GridPane.rowIndex="14" />
-      <Label fx:id="registrationDateLabel" text="" GridPane.columnIndex="2" GridPane.rowIndex="15" />
-      <Separator GridPane.columnSpan="4" GridPane.rowIndex="16" />
-      <Label fx:id="lastVisitLabel" text="" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="17" />
-      <TableView fx:id="employmentQuantityTable" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="18" GridPane.valignment="CENTER">
+      <Separator prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="9" />
+      <Label fx:id="phone2Label" text="" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="10" />
+      <Separator prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="11" />
+      <Label fx:id="addressLabel" text="" GridPane.columnIndex="2" GridPane.rowIndex="12" />
+      <Separator prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="13" />
+      <Label fx:id="subscriptionLabel" text="" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="14" />
+      <Separator GridPane.columnSpan="2147483647" GridPane.rowIndex="15" />
+      <Label fx:id="registrationDateLabel" text="" GridPane.columnIndex="2" GridPane.rowIndex="16" />
+      <Separator GridPane.columnSpan="4" GridPane.rowIndex="17" />
+      <Label fx:id="lastVisitLabel" text="" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="18" />
+      <TableView fx:id="employmentQuantityTable" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="19" GridPane.valignment="CENTER">
         <columns>
           <TableColumn fx:id="employmentColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="500.0" text="Ծառայություն" />
           <TableColumn fx:id="quantityColumn" editable="false" maxWidth="-1.0" minWidth="200.0" prefWidth="500.0" text="Քանակ" />
@@ -119,8 +135,8 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <Button fx:id="enterButton" mnemonicParsing="false" styleClass="primary" text="Մուտք" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="19" />
-      <CheckBox fx:id="bonusCheckBox" mnemonicParsing="false" text="Բոնուս" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.rowIndex="19">
+      <Button fx:id="enterButton" mnemonicParsing="false" styleClass="primary" text="Մուտք" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="20" />
+      <CheckBox fx:id="bonusCheckBox" mnemonicParsing="false" text="Բոնուս" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.rowIndex="20">
          <font>
             <Font size="15.0" />
          </font>
@@ -128,7 +144,7 @@
             <Insets />
          </GridPane.margin>
       </CheckBox>
-      <GridPane hgap="10.0" GridPane.columnSpan="2" GridPane.rowIndex="19">
+      <GridPane hgap="10.0" GridPane.columnSpan="2" GridPane.rowIndex="20">
          <columnConstraints>
             <ColumnConstraints hgrow="NEVER" />
             <ColumnConstraints hgrow="SOMETIMES" />
